#126 - make validation process more compatible with JSON:API spec (Error Source Object -> JSON Pointer), delete Country Validator (JSR380) - use simple inline validator instead